# protokoll_template

./: .gitignore  README.md
JabRef_Database/: physics.bib  physics.bib.bak
Python/: error_propagation.py
dev/: table_generator.py  write_table.py
files/: original_template_T_J.tex  original_template_goofy_jakob.tex  settings.json
lab_tool.python/: table_generator.py  todo.txt  write_table.py
labtool.python/: test_labtool.py
labtool.python/labtool/: LICENSE  __init__.py  pyproject.toml  requirements.txt  setup.cfg
labtool.python/labtool/src/: __init__.py  classes.py  functions.py  monkeypatch_uncertainties.py
labtool.python/labtool/src/monkeypatch/: uncertainties.py
labtool.python/labtool/tests/: fit_student.py  interpolate_student.py  interpolation_1_cubic-copy.txt  interpolation_1_cubic.txt  interpolation_1_linear-copy.txt  interpolation_1_linear.txt  interpolation_2_cubic-copy.txt  interpolation_2_cubic.txt  interpolation_2_linear-copy.txt  interpolation_2_linear.txt  interpolation_3_cubic-copy.txt  interpolation_3_cubic.txt  interpolation_3_linear-copy.txt  interpolation_3_linear.txt  labtool_.py  ste_fro_unc.py  test_Elias.py  test_Elias_2.py  test_classes.py  test_decimal.py  test_general.py  test_table_1.py  test_time.py  tracefuncs.py
labtool.python/labtool/tests/saves/: fit.csv  interp.csv  series.csv
labtool.python/labtool/tests/tables.latex/: pm_siunitx.tex  table2.tex  table3.tex  table4.tex  table5.tex  tests_with_tables.fdb_latexmk  tests_with_tables.fls  tests_with_tables.tex
other/: settings_for_biblatex.json
(+105 files in other folders)
