[metadata]
name = labtool-zandivx
version = 0.1
author = Andreas Zach
# author_email
description = attr: __init__.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
# url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS independent

[options]
package_dir = 
packages = find:
python_requires = >= 3.9